--- a/index.html
+++ b/index.html
@@ -319,13 +319,13 @@
             <img class="bg" id="bg2" src="bg2.jpeg">
             <img class="bg" id="bg1" src="bg.jpg">
 
-            <video loop controls id="vd" src="vd.mov" class="video" type="video/mov"></video>
+            <video loop controls id="vd" src="vd.MOV" class="video" type="video/mov"></video>
             <a href="https://www.google.com/maps/@77.7859292,-70.6483602,3a,75y,154.18h,46.75t/data=!3m6!1e1!3m4!1snKuiOxvKzPZkShLFXK4qPQ!2e0!7i13312!8i6656?entry=ttu">
                 <img id="xk1" src="xk1.png"></a>
-            <video loop controls id="vd3" src="vd3.mov" class="video" type="video/mov"></video>
+            <video loop controls id="vd3" src="vd3.MOV" class="video" type="video/mov"></video>
             <a href="https://www.google.com/maps/contrib/103433160925731202023/photos/@-22.9059399,-43.1765284,3a,75y,90t/data=!3m7!1e5!3m5!1sAF1QipNGqRaeDVRYZFSyEQvjmsx3UvRrX8VlVpt-1WCK!2e10!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipNGqRaeDVRYZFSyEQvjmsx3UvRrX8VlVpt-1WCK%3Dw365-h648-k-no!7i1080!8i1920!4m3!8m2!3m1!1e1?entry=ttu">
                 <img id="xk2" src="xk2.png"></a>
-            <video loop controls id="vd2" src="vd2.mov" class="video" type="video/mov"></video>
+            <video loop controls id="vd2" src="vd2.MOV" class="video" type="video/mov"></video>
             <a href="https://www.google.com/maps/@-76.090968,21.3749669,3a,75y,90t/data=!3m8!1e5!3m6!1sAF1QipNVdoqcSKFORiKX1HNwWApLWytsXF3l-FCN0r5U!2e10!3e10!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipNVdoqcSKFORiKX1HNwWApLWytsXF3l-FCN0r5U%3Dw203-h365-k-no!7i400!8i720?entry=ttu">
                 <img id="xk3" src="xk3.png"></a>
 
