--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="UTF-8">
             <title>🔴 🟡 🟢</title>
-            <link rel="shortcut icon" href="icon1.png">
+            <link rel="shortcut icon" href="icon1.ico" type="image/x-icon" />
             <style>
                 body {
                     background-color: rgb(238, 235, 231);
