--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 
             <div id="light">🔴<br>🟡<br>🟢</div>
             <!-- <div id="car">🚗</div> -->
-            <img id="icon" src="icon1.png">
+            <a href="https://nudoooo.zone/wander/"><img id="icon" src="icon1.png"></a>
         </body>
     </html>
 
